// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageView component should display body header custom element 1`] = `
.c0.endpoint--isListView {
  padding: 0 24px;
}

.c0.endpoint--isListView .endpoint-header {
  padding: 24px;
  margin-bottom: 0;
}

.c0.endpoint--isListView .endpoint-page-content {
  border-left: none;
  border-right: none;
}

.c0.endpoint--isDetailsView .endpoint-page-content {
  padding: 0;
  border: none;
  background: none;
}

.c0 .endpoint-navTabs {
  margin-left: 12px;
}

<PageView
  bodyHeader={
    <p>
      body header
    </p>
  }
  viewType="list"
>
  <Styled(EuiPage)
    className="endpoint--isListView"
  >
    <EuiPage
      className="c0 endpoint--isListView"
    >
      <div
        className="euiPage c0 endpoint--isListView"
      >
        <EuiPageBody>
          <main
            className="euiPageBody"
          >
            <EuiPageContent
              className="endpoint-page-content"
            >
              <EuiPanel
                className="euiPageContent endpoint-page-content"
                paddingSize="l"
              >
                <div
                  className="euiPanel euiPanel--paddingLarge euiPageContent endpoint-page-content"
                >
                  <EuiPageContentHeader>
                    <div
                      className="euiPageContentHeader euiPageContentHeader--responsive"
                    >
                      <EuiPageContentHeaderSection
                        data-test-subj="pageViewBodyTitleArea"
                      >
                        <div
                          className="euiPageContentHeaderSection"
                          data-test-subj="pageViewBodyTitleArea"
                        >
                          <p>
                            body header
                          </p>
                        </div>
                      </EuiPageContentHeaderSection>
                    </div>
                  </EuiPageContentHeader>
                  <EuiPageContentBody
                    data-test-subj="pageViewBodyContent"
                  >
                    <div
                      className="euiPageContentBody"
                      data-test-subj="pageViewBodyContent"
                    >
                      body content
                    </div>
                  </EuiPageContentBody>
                </div>
              </EuiPanel>
            </EuiPageContent>
          </main>
        </EuiPageBody>
      </div>
    </EuiPage>
  </Styled(EuiPage)>
</PageView>
`;

exports[`PageView component should display body header wrapped in EuiTitle 1`] = `
.c0.endpoint--isListView {
  padding: 0 24px;
}

.c0.endpoint--isListView .endpoint-header {
  padding: 24px;
  margin-bottom: 0;
}

.c0.endpoint--isListView .endpoint-page-content {
  border-left: none;
  border-right: none;
}

.c0.endpoint--isDetailsView .endpoint-page-content {
  padding: 0;
  border: none;
  background: none;
}

.c0 .endpoint-navTabs {
  margin-left: 12px;
}

<PageView
  bodyHeader="body header"
  viewType="list"
>
  <Styled(EuiPage)
    className="endpoint--isListView"
  >
    <EuiPage
      className="c0 endpoint--isListView"
    >
      <div
        className="euiPage c0 endpoint--isListView"
      >
        <EuiPageBody>
          <main
            className="euiPageBody"
          >
            <EuiPageContent
              className="endpoint-page-content"
            >
              <EuiPanel
                className="euiPageContent endpoint-page-content"
                paddingSize="l"
              >
                <div
                  className="euiPanel euiPanel--paddingLarge euiPageContent endpoint-page-content"
                >
                  <EuiPageContentHeader>
                    <div
                      className="euiPageContentHeader euiPageContentHeader--responsive"
                    >
                      <EuiPageContentHeaderSection
                        data-test-subj="pageViewBodyTitleArea"
                      >
                        <div
                          className="euiPageContentHeaderSection"
                          data-test-subj="pageViewBodyTitleArea"
                        >
                          <PageViewBodyHeaderTitle>
                            <EuiTitle>
                              <h2
                                className="euiTitle euiTitle--medium"
                                data-test-subj="pageViewBodyTitle"
                              >
                                body header
                              </h2>
                            </EuiTitle>
                          </PageViewBodyHeaderTitle>
                        </div>
                      </EuiPageContentHeaderSection>
                    </div>
                  </EuiPageContentHeader>
                  <EuiPageContentBody
                    data-test-subj="pageViewBodyContent"
                  >
                    <div
                      className="euiPageContentBody"
                      data-test-subj="pageViewBodyContent"
                    >
                      body content
                    </div>
                  </EuiPageContentBody>
                </div>
              </EuiPanel>
            </EuiPageContent>
          </main>
        </EuiPageBody>
      </div>
    </EuiPage>
  </Styled(EuiPage)>
</PageView>
`;

exports[`PageView component should display header left and right 1`] = `
.c0.endpoint--isListView {
  padding: 0 24px;
}

.c0.endpoint--isListView .endpoint-header {
  padding: 24px;
  margin-bottom: 0;
}

.c0.endpoint--isListView .endpoint-page-content {
  border-left: none;
  border-right: none;
}

.c0.endpoint--isDetailsView .endpoint-page-content {
  padding: 0;
  border: none;
  background: none;
}

.c0 .endpoint-navTabs {
  margin-left: 12px;
}

<PageView
  headerLeft="page title"
  headerRight="right side actions"
  viewType="list"
>
  <Styled(EuiPage)
    className="endpoint--isListView"
  >
    <EuiPage
      className="c0 endpoint--isListView"
    >
      <div
        className="euiPage c0 endpoint--isListView"
      >
        <EuiPageBody>
          <main
            className="euiPageBody"
          >
            <EuiPageHeader
              className="endpoint-header"
            >
              <div
                className="euiPageHeader euiPageHeader--responsive endpoint-header"
              >
                <EuiPageHeaderSection
                  data-test-subj="pageViewHeaderLeft"
                >
                  <div
                    className="euiPageHeaderSection"
                    data-test-subj="pageViewHeaderLeft"
                  >
                    <PageViewHeaderTitle>
                      <EuiTitle
                        size="l"
                      >
                        <h1
                          className="euiTitle euiTitle--large"
                          data-test-subj="pageViewHeaderLeftTitle"
                        >
                          page title
                        </h1>
                      </EuiTitle>
                    </PageViewHeaderTitle>
                  </div>
                </EuiPageHeaderSection>
                <EuiPageHeaderSection
                  data-test-subj="pageViewHeaderRight"
                >
                  <div
                    className="euiPageHeaderSection"
                    data-test-subj="pageViewHeaderRight"
                  >
                    right side actions
                  </div>
                </EuiPageHeaderSection>
              </div>
            </EuiPageHeader>
            <EuiPageContent
              className="endpoint-page-content"
            >
              <EuiPanel
                className="euiPageContent endpoint-page-content"
                paddingSize="l"
              >
                <div
                  className="euiPanel euiPanel--paddingLarge euiPageContent endpoint-page-content"
                >
                  <EuiPageContentBody
                    data-test-subj="pageViewBodyContent"
                  >
                    <div
                      className="euiPageContentBody"
                      data-test-subj="pageViewBodyContent"
                    >
                      body content
                    </div>
                  </EuiPageContentBody>
                </div>
              </EuiPanel>
            </EuiPageContent>
          </main>
        </EuiPageBody>
      </div>
    </EuiPage>
  </Styled(EuiPage)>
</PageView>
`;

exports[`PageView component should display only body if not header props used 1`] = `
.c0.endpoint--isListView {
  padding: 0 24px;
}

.c0.endpoint--isListView .endpoint-header {
  padding: 24px;
  margin-bottom: 0;
}

.c0.endpoint--isListView .endpoint-page-content {
  border-left: none;
  border-right: none;
}

.c0.endpoint--isDetailsView .endpoint-page-content {
  padding: 0;
  border: none;
  background: none;
}

.c0 .endpoint-navTabs {
  margin-left: 12px;
}

<PageView
  viewType="list"
>
  <Styled(EuiPage)
    className="endpoint--isListView"
  >
    <EuiPage
      className="c0 endpoint--isListView"
    >
      <div
        className="euiPage c0 endpoint--isListView"
      >
        <EuiPageBody>
          <main
            className="euiPageBody"
          >
            <EuiPageContent
              className="endpoint-page-content"
            >
              <EuiPanel
                className="euiPageContent endpoint-page-content"
                paddingSize="l"
              >
                <div
                  className="euiPanel euiPanel--paddingLarge euiPageContent endpoint-page-content"
                >
                  <EuiPageContentBody
                    data-test-subj="pageViewBodyContent"
                  >
                    <div
                      className="euiPageContentBody"
                      data-test-subj="pageViewBodyContent"
                    >
                      body content
                    </div>
                  </EuiPageContentBody>
                </div>
              </EuiPanel>
            </EuiPageContent>
          </main>
        </EuiPageBody>
      </div>
    </EuiPage>
  </Styled(EuiPage)>
</PageView>
`;

exports[`PageView component should display only header left 1`] = `
.c0.endpoint--isListView {
  padding: 0 24px;
}

.c0.endpoint--isListView .endpoint-header {
  padding: 24px;
  margin-bottom: 0;
}

.c0.endpoint--isListView .endpoint-page-content {
  border-left: none;
  border-right: none;
}

.c0.endpoint--isDetailsView .endpoint-page-content {
  padding: 0;
  border: none;
  background: none;
}

.c0 .endpoint-navTabs {
  margin-left: 12px;
}

<PageView
  headerLeft="page title"
  viewType="list"
>
  <Styled(EuiPage)
    className="endpoint--isListView"
  >
    <EuiPage
      className="c0 endpoint--isListView"
    >
      <div
        className="euiPage c0 endpoint--isListView"
      >
        <EuiPageBody>
          <main
            className="euiPageBody"
          >
            <EuiPageHeader
              className="endpoint-header"
            >
              <div
                className="euiPageHeader euiPageHeader--responsive endpoint-header"
              >
                <EuiPageHeaderSection
                  data-test-subj="pageViewHeaderLeft"
                >
                  <div
                    className="euiPageHeaderSection"
                    data-test-subj="pageViewHeaderLeft"
                  >
                    <PageViewHeaderTitle>
                      <EuiTitle
                        size="l"
                      >
                        <h1
                          className="euiTitle euiTitle--large"
                          data-test-subj="pageViewHeaderLeftTitle"
                        >
                          page title
                        </h1>
                      </EuiTitle>
                    </PageViewHeaderTitle>
                  </div>
                </EuiPageHeaderSection>
              </div>
            </EuiPageHeader>
            <EuiPageContent
              className="endpoint-page-content"
            >
              <EuiPanel
                className="euiPageContent endpoint-page-content"
                paddingSize="l"
              >
                <div
                  className="euiPanel euiPanel--paddingLarge euiPageContent endpoint-page-content"
                >
                  <EuiPageContentBody
                    data-test-subj="pageViewBodyContent"
                  >
                    <div
                      className="euiPageContentBody"
                      data-test-subj="pageViewBodyContent"
                    >
                      body content
                    </div>
                  </EuiPageContentBody>
                </div>
              </EuiPanel>
            </EuiPageContent>
          </main>
        </EuiPageBody>
      </div>
    </EuiPage>
  </Styled(EuiPage)>
</PageView>
`;

exports[`PageView component should display only header right but include an empty left side 1`] = `
.c0.endpoint--isListView {
  padding: 0 24px;
}

.c0.endpoint--isListView .endpoint-header {
  padding: 24px;
  margin-bottom: 0;
}

.c0.endpoint--isListView .endpoint-page-content {
  border-left: none;
  border-right: none;
}

.c0.endpoint--isDetailsView .endpoint-page-content {
  padding: 0;
  border: none;
  background: none;
}

.c0 .endpoint-navTabs {
  margin-left: 12px;
}

<PageView
  headerRight="right side actions"
  viewType="list"
>
  <Styled(EuiPage)
    className="endpoint--isListView"
  >
    <EuiPage
      className="c0 endpoint--isListView"
    >
      <div
        className="euiPage c0 endpoint--isListView"
      >
        <EuiPageBody>
          <main
            className="euiPageBody"
          >
            <EuiPageHeader
              className="endpoint-header"
            >
              <div
                className="euiPageHeader euiPageHeader--responsive endpoint-header"
              >
                <EuiPageHeaderSection
                  data-test-subj="pageViewHeaderLeft"
                >
                  <div
                    className="euiPageHeaderSection"
                    data-test-subj="pageViewHeaderLeft"
                  />
                </EuiPageHeaderSection>
                <EuiPageHeaderSection
                  data-test-subj="pageViewHeaderRight"
                >
                  <div
                    className="euiPageHeaderSection"
                    data-test-subj="pageViewHeaderRight"
                  >
                    right side actions
                  </div>
                </EuiPageHeaderSection>
              </div>
            </EuiPageHeader>
            <EuiPageContent
              className="endpoint-page-content"
            >
              <EuiPanel
                className="euiPageContent endpoint-page-content"
                paddingSize="l"
              >
                <div
                  className="euiPanel euiPanel--paddingLarge euiPageContent endpoint-page-content"
                >
                  <EuiPageContentBody
                    data-test-subj="pageViewBodyContent"
                  >
                    <div
                      className="euiPageContentBody"
                      data-test-subj="pageViewBodyContent"
                    >
                      body content
                    </div>
                  </EuiPageContentBody>
                </div>
              </EuiPanel>
            </EuiPageContent>
          </main>
        </EuiPageBody>
      </div>
    </EuiPage>
  </Styled(EuiPage)>
</PageView>
`;

exports[`PageView component should pass through EuiPage props 1`] = `
.c0.endpoint--isListView {
  padding: 0 24px;
}

.c0.endpoint--isListView .endpoint-header {
  padding: 24px;
  margin-bottom: 0;
}

.c0.endpoint--isListView .endpoint-page-content {
  border-left: none;
  border-right: none;
}

.c0.endpoint--isDetailsView .endpoint-page-content {
  padding: 0;
  border: none;
  background: none;
}

.c0 .endpoint-navTabs {
  margin-left: 12px;
}

<PageView
  aria-label="test-aria-label-here"
  className="test-class-name-here"
  data-test-subj="test-data-test-subj-here"
  restrictWidth="1000"
  viewType="list"
>
  <Styled(EuiPage)
    aria-label="test-aria-label-here"
    className="test-class-name-here"
    data-test-subj="test-data-test-subj-here"
    restrictWidth="1000"
  >
    <EuiPage
      aria-label="test-aria-label-here"
      className="c0 test-class-name-here"
      data-test-subj="test-data-test-subj-here"
      restrictWidth="1000"
    >
      <div
        aria-label="test-aria-label-here"
        className="euiPage euiPage--restrictWidth-custom c0 test-class-name-here"
        data-test-subj="test-data-test-subj-here"
        style={
          Object {
            "maxWidth": "1000",
          }
        }
      >
        <EuiPageBody>
          <main
            className="euiPageBody"
          >
            <EuiPageContent
              className="endpoint-page-content"
            >
              <EuiPanel
                className="euiPageContent endpoint-page-content"
                paddingSize="l"
              >
                <div
                  className="euiPanel euiPanel--paddingLarge euiPageContent endpoint-page-content"
                >
                  <EuiPageContentBody
                    data-test-subj="pageViewBodyContent"
                  >
                    <div
                      className="euiPageContentBody"
                      data-test-subj="pageViewBodyContent"
                    >
                      body content
                    </div>
                  </EuiPageContentBody>
                </div>
              </EuiPanel>
            </EuiPageContent>
          </main>
        </EuiPageBody>
      </div>
    </EuiPage>
  </Styled(EuiPage)>
</PageView>
`;

exports[`PageView component should use custom element for header left and not wrap in EuiTitle 1`] = `
.c0.endpoint--isListView {
  padding: 0 24px;
}

.c0.endpoint--isListView .endpoint-header {
  padding: 24px;
  margin-bottom: 0;
}

.c0.endpoint--isListView .endpoint-page-content {
  border-left: none;
  border-right: none;
}

.c0.endpoint--isDetailsView .endpoint-page-content {
  padding: 0;
  border: none;
  background: none;
}

.c0 .endpoint-navTabs {
  margin-left: 12px;
}

<PageView
  headerLeft={
    <p>
      title here
    </p>
  }
  viewType="list"
>
  <Styled(EuiPage)
    className="endpoint--isListView"
  >
    <EuiPage
      className="c0 endpoint--isListView"
    >
      <div
        className="euiPage c0 endpoint--isListView"
      >
        <EuiPageBody>
          <main
            className="euiPageBody"
          >
            <EuiPageHeader
              className="endpoint-header"
            >
              <div
                className="euiPageHeader euiPageHeader--responsive endpoint-header"
              >
                <EuiPageHeaderSection
                  data-test-subj="pageViewHeaderLeft"
                >
                  <div
                    className="euiPageHeaderSection"
                    data-test-subj="pageViewHeaderLeft"
                  >
                    <p>
                      title here
                    </p>
                  </div>
                </EuiPageHeaderSection>
              </div>
            </EuiPageHeader>
            <EuiPageContent
              className="endpoint-page-content"
            >
              <EuiPanel
                className="euiPageContent endpoint-page-content"
                paddingSize="l"
              >
                <div
                  className="euiPanel euiPanel--paddingLarge euiPageContent endpoint-page-content"
                >
                  <EuiPageContentBody
                    data-test-subj="pageViewBodyContent"
                  >
                    <div
                      className="euiPageContentBody"
                      data-test-subj="pageViewBodyContent"
                    >
                      body content
                    </div>
                  </EuiPageContentBody>
                </div>
              </EuiPanel>
            </EuiPageContent>
          </main>
        </EuiPageBody>
      </div>
    </EuiPage>
  </Styled(EuiPage)>
</PageView>
`;
